# python-cli

./: README.md  pytest.ini  requirements.txt
basecode/: pyproject.toml
basecode/src/: Version.py  ___main___.py
basecode/src/Console/Commands/: CommunicationCommand.py  ScheduleCommand.py
