[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [

    "toml>=0.10.2",
    "scheduler>=0.8.2",
    "typer>=0.7.0",
    "rich>=13.0.0"
]

name = "basecode"
version = "1.0.0"

[tool.setuptools.packages.find]
where = ["basecode"]

[tool.setuptools.package-data]
"*" = ["pyproject.toml"]

[project.scripts]
basecode = "basecode.src.__main__:main"
